z-index bug

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -29,6 +29,7 @@ body {
             background: black;
             opacity: .4;
             width: 100%;
+            z-index: 4;
             height: 100%;
             position: fixed;
             top: 0;
@@ -361,7 +362,7 @@ html {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 4;
+    z-index: 6;
 }
 
 .zoomed-product-image {
